# Builder-Morphe

./: .gitignore  README.md  commit_signature.py  create_release.py  known_signatures.json  main.py  patcher.py  pending_signatures.json  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: patch.yml
lib/: apkmirror.py  github.py  github_dl.py  githubdl.py  http.py  patcher.py  release.py  verify.py  versions.py
