[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-jdk-app"
version = "2.0.0"
description = "Python 3.14 & JDK Workspace with patch.yml module update pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.3",
    "fastapi>=0.115.6",
    "pydantic>=2.10.4",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "py4j>=0.10.9.7",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "google-genai>=1.1.0"
]
